--- a/client/src/stories/grid/reference-page-grid.stories.mdx
+++ b/client/src/stories/grid/reference-page-grid.stories.mdx
@@ -12,7 +12,7 @@ import { Meta } from "@storybook/addon-docs/blocks";
     <div class="titlebar-container">
       <h1>Titlebar</h1>
     </div>
-    <div class="breadcrumb-container">
+    <div class="breadcrumbs-container">
       <h1>Breadcrumb</h1>
     </div>
     <div class="locale-container">
