fix: redesign of language selector (#2839)
* fix: redesign of language selector

Implement redesign of language selector and related interactions.
This also includes a change to how the underlying grid is implemented.

Part of #1486

* fix headless test

* change let to const

* changes based on review feedback

* additional changes based on review

* add key the li and fix grid row inconsistency

* remove negative tabindex

* update to latest implementation

* fix failing headless test

* fix failing headless test

* add missing / at end of test URL

* fix overall layout for desktop

* updates to overall layout of top of document pages

* update grid for standard aka non-document pages

* correctly align lang toggle on mobile

* handle all 5 possible states of breadcrumb-locale container

* instrument view in English and change language links

* also show language menu on non English pages

* send GA event when changing language via language manu

* changes based on review feedback

* feedback on language selector

* fix failing test

* fix failing test

* remove react import

Co-authored-by: Peter Bengtsson <mail@peterbe.com>

--- a/client/src/stories/grid/reference-page-grid.stories.mdx
+++ b/client/src/stories/grid/reference-page-grid.stories.mdx
@@ -9,10 +9,7 @@ import { Meta } from "@storybook/addon-docs/blocks";
     <header class="page-header">
       <h1>Header</h1>
     </header>
-    <div class="titlebar-container">
-      <h1>Titlebar</h1>
-    </div>
-    <div class="breadcrumb-container">
+    <div class="breadcrumbs-container">
       <h1>Breadcrumb</h1>
     </div>
     <div class="locale-container">
