--- a/markdown/localizations/fr.json
+++ b/markdown/localizations/fr.json
@@ -7,7 +7,7 @@
       },
       "card_warning_label": {
         "msgid": "card_warning_label",
-        "msgstr": ["Avertissement :"]
+        "msgstr": ["Attention :"]
       },
       "card_callout_label": {
         "msgid": "card_warning_label",
