--- a/markdown/localizations/en-US.json
+++ b/markdown/localizations/en-US.json
@@ -10,7 +10,7 @@
         "msgstr": ["Warning:"]
       },
       "card_callout_label": {
-        "msgid": "card_warning_label",
+        "msgid": "card_callout_label",
         "msgstr": ["Callout:"]
       }
     }
