--- a/markdown/localizations/fr.json
+++ b/markdown/localizations/fr.json
@@ -10,7 +10,7 @@
         "msgstr": ["Attention :"]
       },
       "card_callout_label": {
-        "msgid": "card_warning_label",
+        "msgid": "card_callout_label",
         "msgstr": ["Remarque :"]
       }
     }
