--- a/markdown/localizations/ko.json
+++ b/markdown/localizations/ko.json
@@ -10,7 +10,7 @@
         "msgstr": ["경고:"]
       },
       "card_callout_label": {
-        "msgid": "card_warning_label",
+        "msgid": "card_callout_label",
         "msgstr": ["알림:"]
       }
     }
